k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: green
  template:
    metadata:
      labels:
        app: frontend
        version: green
    spec:
      containers:
        - name: frontend
          image: frontend-green:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 3200
          readinessProbe:
            httpGet:
              path: /
              port: 3200
            initialDelaySeconds: 5
            periodSeconds: 10
