k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
    version: green   # switch to green when needed
  ports:
    - port: 80
      targetPort: 3200
      nodePort: 32121
